DB use sequelize - order products

--- a/views/shop/cart.pug
+++ b/views/shop/cart.pug
@@ -4,12 +4,16 @@ block head
 block content
     if productsCart.length<1
         h1 Cart is empty
-    ul.product-list
-         each product in productsCart
-            li.card-product-item 
-                p.title #{product.title}  (#{product.quantity}) 
-                form.form-action(action="/shop/cart/delete", method="post")
-                     button.btn.btn-delete-cart(type='submit' value=product.productId name='productId') Delete
+    else
+        ul.product-list
+            each product in productsCart
+                li.card-product-item 
+                    p.title #{product.title}  (#{product.cartItem.quantity}) 
+                    form.form-action(action="/shop/cart/delete", method="post")
+                        button.btn.btn-delete-cart(type='submit' value=product.id name='productId') Delete
+        form.form-action(action="/shop/orders", method="post")
+             button.btn.btn-delete-cart(type='submit') Order Now !
+    
       
 
           
