--- a/views/admin/add-edit-product.pug
+++ b/views/admin/add-edit-product.pug
@@ -16,4 +16,4 @@ block content
             .form-control
                 label Price
                 input(type="number" name="price"  value=productEdit?productEdit.price:'' required step='0.01')
-                button(type="submit" name="productId" value=productEdit?productEdit.productId:'') #{isEditMode?'Update Product':'Add Product'} 
+                button(type="submit" name="productId" value=productEdit?productEdit.id:'') #{isEditMode?'Update Product':'Add Product'} 
