--- a/views/admin/product-list.pug
+++ b/views/admin/product-list.pug
@@ -14,11 +14,11 @@ block content
                         h2.product__price $#{product.price}
                         p.product__description #{product.description}
                     .card-action
-                        a.link-edit(href=('/admin/edit-product/'+ product.productId))
+                        a.link-edit(href=('/admin/edit-product/'+ product.id))
                             button.btn.btn-edit Edit
                             //-Delete nên là là form dung post vì chỉ có quản trị mới có quyền delete sản phẩm
                             //-Và cần phải vào trang quản trị mới submit được
-                        form.form-delete(action=('/admin/delete-product/'+ product.productId), method="POST")
+                        form.form-delete(action=('/admin/delete-product/'+ product.id), method="POST")
                             button.btn.btn-delete(type='submit') Delete
                 
           
