--- a/views/index/index.pug
+++ b/views/index/index.pug
@@ -1,6 +1,6 @@
 include ../layouts/main-layout.pug
 block head
-    link(rel="stylesheet", href="/stylesheets/shop-product-shop.css")
+    link(rel="stylesheet", href="/stylesheets/shop-product-list-detail.css")
 block content
     main
         .grid
@@ -17,5 +17,11 @@ block content
                         //- Có thể dung cách này để gửi Id addToCart nhưng nen dung cách dưới để nó chung router add-to-cart đã tạo
                         //- form.form-delete(action=('/shop/add-to-cart/'+ product.productId), method="POST")
                         form.form-add-to-cart(action='/shop/cart', method="POST")
-                             button.btn.btn-add-to-cart(type='submit') Add to cart
-                             input.input-hidden(type='hidden' value=product.productId name='productId')
+                             button.btn.btn-add-to-cart(type='submit' value=product.id name='productId') Add to cart
+                        a.link-product-detail(href=("/shop/product-detail/"+product.id))
+                            button.btn.btn-detail Detail
+                
+          
+                
+             
+            
