--- a/views/admin/product-list.pug
+++ b/views/admin/product-list.pug
@@ -9,16 +9,16 @@ block content
                     header.card-header
                         h1.product__title #{product.title}
                         .card-image
-                             img(src=product.urlImage, alt=product.title, srcset="")  
+                             img(src=product.imageUrl, alt=product.title, srcset="")  
                     .card-content
                         h2.product__price $#{product.price}
                         p.product__description #{product.description}
                     .card-action
-                        a.link-edit(href=('/admin/edit-product/'+ product.id))
+                        a.link-edit(href=('/admin/edit-product/'+ product._id))
                             button.btn.btn-edit Edit
                             //-Delete nên là là form dung post vì chỉ có quản trị mới có quyền delete sản phẩm
                             //-Và cần phải vào trang quản trị mới submit được
-                        form.form-delete(action=('/admin/delete-product/'+ product.id), method="POST")
+                        form.form-delete(action=('/admin/delete-product/'+ product._id), method="POST")
                             button.btn.btn-delete(type='submit') Delete
                 
           
