--- a/views/shop/orders.pug
+++ b/views/shop/orders.pug
@@ -1,18 +1,19 @@
 include ../layouts/main-layout.pug
 block head
+    link(rel="stylesheet", href="/stylesheets/orders.css")
 block content
     h1 Order
     main
         if orders.length==0
             h1 Nothing There !
         else
-            ul
-                 each order in orders
-                    li
-                        h3 # #{order.id}
-                        ul
-                            each product in order.products
-                                li - #{product.title}      ( #{product.orderItem.quantity} ) 
+            ul.list-orders
+                 each order,index in orders
+                    li.item-order
+                        h3 # #{index} :  #{order._id}
+                        ul.list-products
+                            each product in order.productsCart
+                                li.item-product - #{product.title}      ( #{product.quantity} ) 
                 
           
                 
