--- a/views/shop/product-detail.pug
+++ b/views/shop/product-detail.pug
@@ -8,12 +8,12 @@ block content
                 header.card-header
                     h1.product__title #{product.title}
                 .card-image
-                    img(src=product.urlImage, alt=product.title, srcset="")  
+                    img(src=product.imageUrl, alt=product.title, srcset="")  
                 .card-content
                     h2.product__price $#{product.price}
                     p.product__description #{product.description}
-                form.form-add-to-cart(action=("/shop/add-to-cart/"+ product.id), method="post")
-                    button.btn.btn-add-to-cart(type='submit') Add to cart
+                form.form-add-to-cart(action='/shop/cart', method="POST")
+                    button.btn.btn-add-to-cart(type='submit' value=product._id name='productId' ) Add to cart
   
                 
                                   
