--- a/views/shop/product-shop.pug
+++ b/views/shop/product-shop.pug
@@ -9,16 +9,16 @@ block content
                     header.card-header
                         h1.product__title #{product.title}
                         .card-image
-                             img(src=product.urlImage, alt=product.title, srcset="")  
+                             img(src=product.imageUrl, alt=product.title, srcset="")  
                     .card-content
                         h2.product__price $#{product.price}
                         p.product__description #{product.description}
                     .card-action
                         //- Có thể dung cách này để gửi Id addToCart nhưng nen dung cách dưới để nó chung router add-to-cart đã tạo
-                        //- form.form-delete(action=('/shop/add-to-cart/'+ product.id), method="POST")
+                        //- form.form-delete(action=('/shop/add-to-cart/'+ product._id), method="POST")
                         form.form-add-to-cart(action='/shop/cart', method="POST")
-                             button.btn.btn-add-to-cart(type='submit' value=product.id name='productId') Add to cart
-                        a.link-product-detail(href=("/shop/product-detail/"+product.id))
+                             button.btn.btn-add-to-cart(type='submit' value=product._id name='productId' ) Add to cart
+                        a.link-product-detail(href=("/shop/product-detail/"+product._id))
                             button.btn.btn-detail Detail
                 
           
