--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -43,6 +43,18 @@ button:hover {
     background-color: rgba(0, 131, 218, 0.596);
 
 }
+.btn-verify{
+    font            : inherit;
+    padding         : 0.3rem 1rem;
+    border          : 1px solid var(--color-border-input);
+    background-color: rgba(17, 173, 235, 0.747);
+    color           : rgb(0, 0, 0);
+    border-radius   : 3px;
+    cursor          : pointer;
+    margin-bottom: 1rem;
+    display: inline-block;
+    text-decoration: none;
+}
 
 .alert-danger {
     border          : 2px solid rgb(255, 0, 140);
