--- a/views/auth/login.pug
+++ b/views/auth/login.pug
@@ -18,6 +18,7 @@ block content
                 label(for="password") Password
                 input(type="password", name="password")
             button.btn.btn-submit(type="submit" name="_csrf" value=csrfToken) Login
+            a(href='/email-reset-password').reset-password Reset Password
 
     
       
