--- a/public/stylesheets/form-add-product.css
+++ b/public/stylesheets/form-add-product.css
@@ -50,3 +50,11 @@ button:hover {
     background-color: rgba(0, 131, 218, 0.596);
 
 }
+.alert-danger {
+    border          : 2px solid rgb(255, 0, 140);
+    padding         : 0.5rem;
+    width           : 80%;
+    margin-bottom:1rem; 
+    margin-top:1rem; 
+    background-color: rgba(243, 71, 114, 0.342);
+}
