--- a/public/stylesheets/cart.css
+++ b/public/stylesheets/cart.css
@@ -1,7 +1,11 @@
 .card-product-item {
-   margin: 1rem;
-   display     : flex;
+   margin     : 1rem;
+   padding    : 1rem;
+   display    : flex;
+   justify-content: space-between;
    align-items: center;
+   box-shadow : -1px 2px 5px 3px rgba(240, 228, 240, 1);
+
 }
 
 button {
@@ -12,7 +16,19 @@ button {
    color           : rgb(3, 97, 126);
    border-radius   : 3px;
    cursor          : pointer;
-   margin: 1rem;
+}
+.form-action{
+   text-align: center;
+}
+.btn-delete-cart {
+   border     : 1px solid rgba(253, 64, 16, 0.856);
+   color      : rgba(253, 64, 16, 0.856);
+   margin-left: 1rem;
+
+}
+
+.btn-order {
+   margin: 1rem auto;
 }
 
 button:hover {
