--- a/views/shop/cart.pug
+++ b/views/shop/cart.pug
@@ -8,12 +8,13 @@ block content
         ul.product-list
             each productCart in productsCart
                 li.card-product-item 
-                    p.title #{productCart.title}  (#{productCart.quantity}) 
+                    p.title #{productCart.title} 
+                    p.quantity Quantity: #{productCart.quantity}
                     form.form-action(action="/shop/cart/delete", method="post")
                         input(type="hidden" name='_csrf' value=csrfToken)
                         button.btn.btn-delete-cart(type='submit' value=productCart.productId name='productCartId') Delete
-        form.form-action(action="/shop/orders", method="post")
-             button.btn.btn-delete-cart(type='submit' name='_csrf' value=csrfToken) Order Now !
+        form.form-action(action="/shop/checkout", method="get")
+             button.btn.btn-order(type='submit') Order Now !
     
       
 
